[package]
name = "transaction"
version = "0.1.0"
authors = ["Sachin Beniwal <sachinbeniwal0101@gmail.com>"]
edition = "2021"

[lib]
name = "transaction"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
config = "0.15.7"
mpl-token-metadata = "5.1.0"
rustler = "0.36.0"
serde = { version = "1.0.217", features = ["derive"] }
solana-client = "2.1.11"
solana-program = "2.1.11"
solana-sdk = "2.1.11"
spl-associated-token-account = "6.0.0"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "json",
    "chrono",
    "env-filter",
] }
